--- a/src/main/resources/templates/kafkasend/list.html
+++ b/src/main/resources/templates/kafkasend/list.html
@@ -54,7 +54,7 @@
 </div>
 </div>
 
-<div class="table_div">
+<div class="search_div">
   <div id="searchParam"  shiro:hasPermission="kafkaSend:list">
     <form class="layui-form ">
       <div class="layui-form-item">
@@ -71,18 +71,19 @@
   </div>
   <table class="layui-table" id="showTable" lay-filter="showTable" ></table>
 </div>
+
 <script type="text/html" id="toolbar">
   <div class="layui-btn-container">
     <button class="layui-btn layui-btn-sm" lay-event="add"  shiro:hasPermission="kafkaSend:add">添加</button>
     <button class="layui-btn layui-btn-sm" lay-event="batchDeleted" shiro:hasPermission="kafkaSend:delete">删除</button>
   </div>
 </script>
+
+
 <script type="text/html" id="tool">
   <a class="layui-btn layui-btn-xs" lay-event="edit" shiro:hasPermission="kafkaSend:update">编辑</a>
   <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del" shiro:hasPermission="kafkaSend:delete">删除</a>
   <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="send">发送到kafka</a>
-
-
 </script>
 
 </body>
@@ -156,7 +157,7 @@
           }
           break;
         case 'add':
-          $(".table_div").hide();
+          $(".search_div").hide();
           $(".operation").show();
           $(".title").html("新增");
           setTimeout(function () {
@@ -190,7 +191,7 @@
           break;
 
         case 'edit':
-          $(".table_div").hide();
+          $(".search_div").hide();
           $(".operation").show();
           $(".title").html("编辑");
           setTimeout(function () {
@@ -252,13 +253,9 @@
     }
 
 
-
-
-
-
     //返回
     $("#btn_cancel").click(function() {
-      $(".table_div").show();
+      $(".search_div").show();
       $(".operation").hide();
       return false;
     });
@@ -267,13 +264,13 @@
     form.on('submit(submit)', function(data){
       if(data.field.id===undefined || data.field.id===null || data.field.id===""){
         CoreUtil.sendPost(ctx + "kafkaSend/add",data.field,function (res) {
-          $(".table_div").show();
+          $(".search_div").show();
           $(".operation").hide();
           search();
         });
       }else {
         CoreUtil.sendPut(ctx + "kafkaSend/update",data.field,function (res) {
-          $(".table_div").show();
+          $(".search_div").show();
           $(".operation").hide();
           search();
         });
